--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    color: #1c1c20;
+    color: #333;
     font-family: 'Oxygen', sans-serif;
 }
 
@@ -8,8 +8,8 @@ body {
     border-radius: 0;
 }
 
-.navbar-default .navbar-brand{
-    color: #1c1c20;
+.navbar-default .navbar-brand {
+    color: #333;
 }
 
 h2 {
@@ -17,10 +17,9 @@ h2 {
 }
 
 section {
-    border: 1px solid #000;
-    margin-top: 7%;
+    border: 1px solid #ccc;
+    margin-top: 5%;
     margin-bottom: 3%;
-    padding: 5%;
-    background-color: rgba(255, 0, 0, .7);
-
+    padding: 4%;
+    background-color: rgba(255, 228, 196, 0.8);
 }
